--- a/404.html
+++ b/404.html
@@ -3,31 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Replace with your own title -->
     <title>link forwarding</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <link rel="stylesheet" type="text/css" href="404.css">
     <link rel="stylesheet" type="text/css" href="404-input.css">
     <script src="404.js" type="text/javascript"></script>
+
 </head>
 
-<body>
-    <div class="overlay"></div>
-    <div class="terminal">
-        <h1>Error <span class="errorcode">404</span></h1>
-        <p class="output">The short link <a id="short-link-not-found" href="#1"></a> was not found.</p>
-        <p class="output">Did you spell it correctly? </p>
-        <p class="output">Want to create a short link?</p>
-        <p id="create-link-question">$ <a id="yes" href="#yes">YES</a> | <a href="#no">NO</a></p>
-
-        <div id="create-short-link" style="display: none">
-            <p class="output"><a href="#yes">YES</a></p>
-            <p>
-                <span id="origin-url"></span>#<input id="new-hash" class="input input-resize output" type="text" value="" placeholder="your-short-link" /> --> <input id="new-link" class="input input-resize output"  type="text" value="" placeholder="Enter link here" />
-            </p>
-            <p><a id="create-link" href="#create">create</a></p>
-        </div>
-
+<body class="output">
+    <div id="not-found-msg" >
     </div>
+    <div id="create-shortlink-question" style="display:none">
+        <p><span id="create-yes" class="input-choice">yes</span> | <span id="create-no" class="input-choice">no</span></p>
+    </div>
+    <div id="shortlink-input" style="display:none">
+        <div id="shortlink-input-url-msg"></div>
+        <div id="shortlink-input-fields" style="display:none">
+            <p>$ #<input id="shortlink" class="input" type="text" placeholder="your-short-link" value=""></p>
+            <p>$ <input id="destination-url" class="input" type="text" placeholder="enter your url" value=""></p>
+        </div>
+        <p><span id="create-button" class="input-choice">create</span></p>
+    </div>
+    <div id="goodbye-msg"></div>
 </body>
 
 </html>
