--- a/404.html
+++ b/404.html
@@ -26,8 +26,9 @@
             <p>$ #<input id="shortlink" class="input" type="text" placeholder="your-short-link" value=""></p>
             <p>$ <input id="destination-url" class="input" type="text" placeholder="enter your url" value=""></p>
         </div>
-        <p><span id="create-button" class="input-choice">create</span></p>
+        <p><span id="create-button" class="input-choice" style="display:none">create</span></p>
     </div>
+    <div id="creating-link-msg"></div>
     <div id="goodbye-msg"></div>
 </body>
 
