--- a/404.html
+++ b/404.html
@@ -15,21 +15,28 @@
 </head>
 
 <body class="output">
-    <div id="not-found-msg" >
-    </div>
-    <div id="create-shortlink-question" style="display:none">
-        <p><span id="create-yes" class="input-choice">yes</span> | <span id="create-no" class="input-choice">no</span></p>
-    </div>
-    <div id="shortlink-input" style="display:none">
-        <div id="shortlink-input-url-msg"></div>
-        <div id="shortlink-input-fields" style="display:none">
-            <p>$ #<input id="shortlink" class="input" type="text" placeholder="your-short-link" value=""></p>
-            <p>$ <input id="destination-url" class="input" type="text" placeholder="enter your url" value=""></p>
+    <div id="404">
+        <div id="not-found-msg">
         </div>
-        <p><span id="create-button" class="input-choice" style="display:none">create</span></p>
+        <div id="create-shortlink-question" style="display:none">
+            <p><span id="create-yes" class="input-choice">yes</span> | <span id="create-no"
+                    class="input-choice">no</span></p>
+        </div>
+        <div id="shortlink-input" style="display:none">
+            <div id="shortlink-input-url-msg"></div>
+            <div id="shortlink-input-fields" style="display:none">
+                <p>$ #<input id="shortlink" class="input" type="text" placeholder="your-short-link" value=""></p>
+                <p>$ <input id="destination-url" class="input" type="text" placeholder="enter your url" value=""></p>
+            </div>
+            <p><span id="create-button" class="input-choice" style="display:none">create</span></p>
+        </div>
+        <div id="creating-link-msg"></div>
+        <div id="goodbye-msg"></div>
     </div>
-    <div id="creating-link-msg"></div>
-    <div id="goodbye-msg"></div>
+    <div id="login" style="display:none">
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
