--- a/404.html
+++ b/404.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Shortlink Not Found</title>
 
-    <link rel="stylesheet" type="text/css" href="404.css">
-    <link rel="stylesheet" type="text/css" href="404-input.css">
-    <script src="404.js" type="text/javascript"></script>
-
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+
+    <link rel="stylesheet" type="text/css" href="404.css">
+    <link rel="stylesheet" type="text/css" href="404-input.css">
+
 </head>
 
 <body class="output">
@@ -40,7 +40,9 @@
 
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <script src="backend.js" type="text/javascript"></script>
+    <script src="404.js" type="text/javascript"></script>
 </body>
 
 </html>
