--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 		<script src="redirect.js"></script>
 	</head>
 	<body>
+
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="backend.js" type="text/javascript"></script>
 	</body>
 </html>
