--- a/404.html
+++ b/404.html
@@ -34,6 +34,7 @@
         <div id="goodbye-msg"></div>
     </div>
     <div id="login" style="display:none">
+        <p>Choose authentication provider:</p>
         <div id="firebaseui-auth-container"></div>
         <div id="loader">Loading...</div>
     </div>
