--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
-    <link rel="stylesheet" type="text/css" href="404.css">
-    <link rel="stylesheet" type="text/css" href="404-input.css">
+    <link rel="stylesheet" type="text/css" href="css/404.css">
+    <link rel="stylesheet" type="text/css" href="css/404-input.css">
 
 </head>
 
@@ -42,8 +42,9 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-    <script src="backend.js" type="text/javascript"></script>
-    <script src="404.js" type="text/javascript"></script>
+    <script src="js/backend.js" type="text/javascript"></script>
+    <script src="js/type.js" type="text/javascript"></script>
+    <script src="js/404.js" type="text/javascript"></script>
 </body>
 
 </html>
