--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8">
 		<!-- Replace with your own title -->
         <title>link forwarding</title>
-        <script src="redirect-data.js"></script>
-		<script src="redirect.js"></script>
 	</head>
 	<body>
 
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-    <script src="backend.js" type="text/javascript"></script>
+    <script src="js/backend.js" type="text/javascript"></script>
+    <script src="sj/redirect-data.js"></script>
+    <script src="js/redirect.js"></script>
 	</body>
 </html>
